--- a/app/src/main/res/layout/activity_signup_elderly.xml
+++ b/app/src/main/res/layout/activity_signup_elderly.xml
@@ -84,10 +84,7 @@
             android:drawableLeft="@drawable/baseline_key_24"
             android:drawablePadding="20dp"
             android:hint="4 digit PIN"
-            android:inputType="numberPassword"
-            android:padding="20dp"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white" />
+            android:inputType="numberPassword" />
 
         <Button
             android:id="@+id/signupeld"
