--- a/app/src/main/res/layout/activity_forgot_pass_page.xml
+++ b/app/src/main/res/layout/activity_forgot_pass_page.xml
@@ -33,6 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/email"
+        android:inputType="textEmailAddress"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
