--- a/app/src/main/res/layout/activity_signup_elderly.xml
+++ b/app/src/main/res/layout/activity_signup_elderly.xml
@@ -9,7 +9,7 @@
         <ImageView
             android:id="@+id/logphotoeld"
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="50dp"
             android:src="@drawable/loginphoto" />
 
         <EditText
@@ -55,26 +55,47 @@
             android:drawableLeft="@drawable/baseline_phone_24"
             android:drawablePadding="20dp"
             android:inputType="phone"/>
+
         <EditText
+            android:id="@+id/addresseld"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/addresseld"
             android:layout_below="@+id/mobileNumbereld"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             android:background="@color/blue"
-            android:hint="@string/address"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
-            android:layout_margin="10dp"
-            android:padding="20dp"
             android:drawableLeft="@drawable/baseline_home_24"
             android:drawablePadding="20dp"
-            android:inputType="textPostalAddress"/>
+            android:hint="@string/address"
+            android:inputType="textPostalAddress"
+            android:padding="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
+
+        <EditText
+            android:id="@+id/allergies"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/addresseld"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/blue"
+            android:drawableLeft="@drawable/baseline_fastfood_24"
+            android:drawablePadding="20dp"
+            android:hint="@string/allergies"
+            android:padding="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
 
         <EditText
             android:id="@+id/signuppasseld"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/addresseld"
+            android:layout_below="@+id/allergies"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
