--- a/app/src/main/res/layout/fragment_meal_history.xml
+++ b/app/src/main/res/layout/fragment_meal_history.xml
@@ -8,12 +8,14 @@
         <TextView
             android:id="@+id/t_view"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="30sp"/>
 
         <!-- Spinner (Dropdown) -->
         <Spinner
             android:id="@+id/elderly_select"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="48dp"
+            android:background="@color/white"/>
 
 </LinearLayout>
