--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,6 +13,9 @@
             android:id="@+id/nav_meal_managment"
             android:icon="@drawable/baseline_fastfood_24"
             android:title="@string/meal_managment" />
+        <item
+            android:id="@+id/testDatePicker"
+            android:title="TestDatePicker" />
 
     </group>
     <item android:title="@string/profile">
