--- a/app/src/main/res/layout/fragment_mealmanagment.xml
+++ b/app/src/main/res/layout/fragment_mealmanagment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
 
     <com.google.android.material.textfield.TextInputLayout
 
@@ -21,15 +22,15 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <EditText
-        android:id="@+id/myDate"
+    <Button
+        android:id="@+id/btnDatePicker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
         android:background="@color/blue"
-        android:hint="@string/enter_day"
+        android:hint="Pick date"
         android:padding="8dp"
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -37,16 +38,17 @@
         android:textSize="23sp"
         android:layout_below="@+id/select_elder_dropdown"/>
 
-    <EditText
-        android:id="@+id/mytime"
+    <Button
+        android:id="@+id/btnTimePicker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/lol"
+        android:layout_below="@id/btnDatePicker"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:background="@color/blue"
-        android:hint="@string/enter_time"
+        android:hint="Pick Time"
+
         android:padding="8dp"
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -55,26 +57,27 @@
 
 
     <EditText
-        android:id="@+id/mycomment"
+        android:id="@+id/mealComment"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_below="@id/mytime"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/meal_picker"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
-        android:background="@color/blue"
-        android:hint="@string/the_food_is"
+
+        android:hint="Add meal comment..."
         android:padding="8dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColor="@color/black"
+        android:textColorHint="@color/gray"
         android:textSize="23sp"
         android:gravity="top"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/mycomment"
+        android:layout_below="@+id/mealComment"
         android:text="@string/save"
         android:id="@+id/savebtn"
+        android:background="@color/blue"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:backgroundTint="@color/gray"/>
@@ -82,11 +85,11 @@
 
     <com.google.android.material.textfield.TextInputLayout
 
-        android:id="@+id/lol"
+        android:id="@+id/meal_picker"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/myDate"
+        android:layout_below="@+id/btnTimePicker"
         android:layout_margin="10dp"
         android:hint="@string/select">
 
