i am done with the profile settings layout. I added about the app check it and i changed the photos of the call us and mail us java classes.

--- a/app/src/main/res/layout/fragment_callus.xml
+++ b/app/src/main/res/layout/fragment_callus.xml
@@ -8,7 +8,7 @@
         android:id="@+id/Abada_info"
         android:layout_width="wrap_content"
         android:layout_height="262dp"
-        android:src="@drawable/doctor" />
+        android:src="@drawable/phone" />
 
     <TextView
         android:id="@+id/phonenum"
