--- a/app/src/main/res/layout/fragment_emailus.xml
+++ b/app/src/main/res/layout/fragment_emailus.xml
@@ -7,7 +7,7 @@
         android:id="@+id/email_doc"
         android:layout_width="wrap_content"
         android:layout_height="262dp"
-        android:src="@drawable/doctor_email" />
+        android:src="@drawable/mail" />
 
     <TextView
         android:id="@+id/emailuson"
