--- a/app/src/main/res/layout/activity_forgot_pass_page.xml
+++ b/app/src/main/res/layout/activity_forgot_pass_page.xml
@@ -25,12 +25,13 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:textSize="20dp"
+        android:textSize="20sp"
+        android:gravity="center"
         />
 
     <EditText
         android:id = "@+id/email"
-        android:layout_width="match_parent"
+        android:layout_width="391dp"
         android:layout_height="wrap_content"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
@@ -38,12 +39,13 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:drawableLeft="@drawable/baseline_email_24"
+        android:drawableStart="@drawable/baseline_email_24"
         android:drawablePadding="20dp"
         android:background="@color/blue"
         android:padding="20dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white"/>
+        android:textColorHint="@color/white"
+        android:autofillHints="emailAddress"/>
 
     <Button
         android:text="@string/send_reset_mail"
@@ -54,6 +56,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
+        android:textColor="@color/white"
         android:background="@color/blue"/>
 
 </LinearLayout>
