--- a/app/src/main/res/layout/activity_loginpage.xml
+++ b/app/src/main/res/layout/activity_loginpage.xml
@@ -11,11 +11,12 @@
         android:layout_height="400dp"
         android:src="@drawable/loginphoto"
         android:id="@+id/logphoto"
-        />
+        android:importantForAccessibility="no"
+        android:layout_centerHorizontal="true"/>
 
     <EditText
         android:id="@+id/email1"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/logphoto"
         android:layout_marginStart="10dp"
@@ -23,25 +24,29 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@color/blue"
-        android:drawableLeft="@drawable/baseline_email_24"
+        android:drawableStart="@drawable/baseline_email_24"
         android:drawablePadding="20dp"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:padding="20dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+        android:autofillHints="emailAddress"
+        android:layout_centerInParent="true"/>
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/email1"
+        android:layout_centerInParent="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
+        android:autofillHints="password"
         android:background="@color/blue"
-        android:drawableLeft="@drawable/baseline_lock_24"
+        android:drawableStart="@drawable/baseline_lock_24"
         android:drawablePadding="20dp"
         android:hint="@string/password"
         android:inputType="textPassword"
@@ -63,7 +68,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/rememberme"
         android:layout_centerHorizontal="true"
-        android:text="@string/login" />
+        android:text="@string/login"
+        android:textColor="@color/white"/>
 
     <TextView
         android:id="@+id/forgotpass"
