--- a/app/src/main/res/layout/activity_signuppage.xml
+++ b/app/src/main/res/layout/activity_signuppage.xml
@@ -11,12 +11,13 @@
         android:layout_height="200dp"
         android:src="@drawable/loginphoto"
         android:id="@+id/logphoto"
-        />
+        android:importantForAccessibility="no"
+        android:layout_centerHorizontal="true"/>
 
 
     <EditText
         android:id="@+id/username1"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/logphoto"
         android:layout_marginStart="10dp"
@@ -24,17 +25,20 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@color/blue"
-        android:drawableLeft="@drawable/baseline_person_outline_24"
+        android:drawableStart="@drawable/baseline_person_outline_24"
         android:drawablePadding="20dp"
         android:hint="@string/full_name"
         android:padding="20dp"
         android:singleLine="true"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+        android:autofillHints="name"
+        android:inputType="textPersonName"
+        android:layout_centerHorizontal="true"/>
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/username1"
         android:layout_marginStart="10dp"
@@ -42,17 +46,19 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@color/blue"
-        android:drawableLeft="@drawable/baseline_email_24"
+        android:drawableStart="@drawable/baseline_email_24"
         android:drawablePadding="20dp"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:padding="20dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+        android:autofillHints="emailAddress"
+        android:layout_centerHorizontal="true"/>
 
     <EditText
         android:id="@+id/mobileNumber"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/email"
         android:layout_marginStart="10dp"
@@ -60,17 +66,19 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@color/blue"
-        android:drawableLeft="@drawable/baseline_phone_24"
+        android:drawableStart="@drawable/baseline_phone_24"
         android:drawablePadding="20dp"
-        android:hint="Mobile Number"
+        android:hint="@string/mobile_number"
         android:inputType="phone"
         android:padding="20dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+        android:autofillHints="phone"
+        android:layout_centerHorizontal="true"/>
 
     <EditText
         android:id="@+id/signuppass"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/mobileNumber"
         android:layout_marginStart="10dp"
@@ -78,17 +86,19 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@color/blue"
-        android:drawableLeft="@drawable/baseline_key_24"
+        android:drawableStart="@drawable/baseline_key_24"
         android:drawablePadding="20dp"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="20dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+        android:autofillHints="password"
+        android:layout_centerHorizontal="true"/>
 
     <EditText
         android:id="@+id/resignuppass"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signuppass"
         android:layout_marginStart="10dp"
@@ -96,13 +106,15 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@color/blue"
-        android:drawableLeft="@drawable/baseline_key_24"
+        android:drawableStart="@drawable/baseline_key_24"
         android:drawablePadding="20dp"
         android:hint="@string/password_re"
         android:inputType="textPassword"
         android:padding="20dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+        android:autofillHints="password"
+        android:layout_centerHorizontal="true"/>
 
     <Button
         android:id="@+id/signup"
@@ -115,6 +127,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:text="@string/signup"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        android:textColor="@color/white"/>
 
 </RelativeLayout>
