--- a/app/src/main/res/layout/fragment_mealmanagment.xml
+++ b/app/src/main/res/layout/fragment_mealmanagment.xml
@@ -8,10 +8,11 @@
 
         android:id="@+id/select_elder_dropdown"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="Select Elder">
+        android:hint="Select Elder"
+        android:layout_centerHorizontal="true">
 
         <AutoCompleteTextView
             android:id="@+id/elder_select_list"
@@ -24,23 +25,24 @@
 
     <Button
         android:id="@+id/btnDatePicker"
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
         android:background="@color/blue"
-        android:hint="Pick date"
+        android:hint="@string/pick_date"
         android:padding="8dp"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="23sp"
-        android:layout_below="@+id/select_elder_dropdown"/>
+        android:layout_below="@+id/select_elder_dropdown"
+        android:layout_centerHorizontal="true"/>
 
     <Button
         android:id="@+id/btnTimePicker"
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/btnDatePicker"
         android:layout_marginLeft="10dp"
@@ -48,7 +50,7 @@
         android:layout_marginRight="10dp"
         android:background="@color/blue"
         android:hint="Pick Time"
-
+        android:layout_centerHorizontal="true"
         android:padding="8dp"
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -58,19 +60,20 @@
 
     <EditText
         android:id="@+id/mealComment"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/meal_picker"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
-
+        android:layout_centerHorizontal="true"
         android:hint="Add meal comment..."
         android:padding="8dp"
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
         android:textSize="23sp"
-        android:gravity="top"/>
+        android:gravity="top"
+        android:importantForAutofill="no" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -80,18 +83,20 @@
         android:background="@color/blue"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:backgroundTint="@color/gray"/>
+        android:backgroundTint="@color/gray"
+        android:textColor="@color/white"/>
 
 
     <com.google.android.material.textfield.TextInputLayout
 
         android:id="@+id/meal_picker"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/btnTimePicker"
         android:layout_margin="10dp"
-        android:hint="@string/select">
+        android:hint="@string/select"
+        android:layout_centerHorizontal="true">
 
         <AutoCompleteTextView
             android:id="@+id/auto_complete_txt"
