--- a/app/src/main/res/layout/fragment_profilesettings.xml
+++ b/app/src/main/res/layout/fragment_profilesettings.xml
@@ -9,9 +9,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:gravity="center"
-        android:text="Settings"
+        android:text="@string/settings"
         android:textColor="@color/black"
-        android:textSize="40dp"
+        android:textSize="40sp"
         android:textStyle="bold" />
 
     <TextView
@@ -21,7 +21,7 @@
         android:layout_below="@id/settingstext"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:text="Change your basic account settings here."
+        android:text="@string/basic_account_settings"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -31,9 +31,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textsettings"
         android:layout_marginTop="40dp"
-        android:text="Your username:"
+        android:text="@string/your_username"
         android:textColor="@color/black"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
@@ -42,9 +42,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/changename"
         android:layout_marginTop="30dp"
-        android:text="Your email adress:"
+        android:text="@string/your_email"
         android:textColor="@color/black"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
@@ -53,9 +53,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/changeemail"
         android:layout_marginTop="30dp"
-        android:text="Your number:"
+        android:text="@string/your_number"
         android:textColor="@color/black"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
@@ -64,38 +64,46 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/changenumber"
         android:layout_marginTop="30dp"
-        android:text="Your password:"
+        android:text="@string/your_password"
         android:textColor="@color/black"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <EditText
         android:id="@+id/yourusername"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="211dp"
-        android:layout_toRightOf="@id/changename" />
+        android:layout_toEndOf="@id/changename"
+        android:autofillHints="username"
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/youremail"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="260dp"
-        android:layout_toRightOf="@id/changeemail" />
+        android:layout_toEndOf="@id/changeemail"
+        android:autofillHints="emailAddress"
+        android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/yournumber"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="318dp"
-        android:layout_toRightOf="@id/changeemail" />
+        android:layout_toEndOf="@id/changenumber"
+        android:autofillHints="phone"
+        android:inputType="phone" />
 
     <EditText
         android:id="@+id/yourpass"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="375dp"
-        android:layout_toRightOf="@id/changeemail" />
+        android:layout_toEndOf="@id/changepassword"
+        android:autofillHints="password"
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/savechangesbtn"
@@ -105,15 +113,16 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:backgroundTint="@color/blue"
-        android:text="Save changes" />
+        android:text="@string/save_changes"
+        android:textColor="@color/white"/>
 
     <com.google.android.material.textfield.TextInputLayout
 
         android:id="@+id/lang"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="wrap_content"
-
+        android:layout_centerHorizontal="true"
         android:layout_margin="10dp"
         android:hint="@string/select_language">
 
