--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#757AF4</color>
+    <color name="blue">#1117D0</color>
     <color name="aqua">#1A90C6</color>
     <color name="red">#8A0900</color>
     <color name="gray">#7E7D7D</color>
