--- a/app/src/main/res/layout/fragment_profilesettings.xml
+++ b/app/src/main/res/layout/fragment_profilesettings.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textsettings"
         android:layout_marginTop="40dp"
-        android:text="Your username:"
+        android:text="Your name:"
         android:textColor="@color/black"
         android:textSize="18dp"
         android:textStyle="bold" />
@@ -58,17 +58,6 @@
         android:textSize="18dp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/changepassword"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/changenumber"
-        android:layout_marginTop="30dp"
-        android:text="Your password:"
-        android:textColor="@color/black"
-        android:textSize="18dp"
-        android:textStyle="bold" />
-
     <EditText
         android:id="@+id/yourusername"
         android:layout_width="match_parent"
@@ -76,7 +65,7 @@
         android:layout_marginTop="211dp"
         android:layout_toRightOf="@id/changename" />
 
-    <EditText
+    <TextView
         android:id="@+id/youremail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -90,18 +79,11 @@
         android:layout_marginTop="318dp"
         android:layout_toRightOf="@id/changeemail" />
 
-    <EditText
-        android:id="@+id/yourpass"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="375dp"
-        android:layout_toRightOf="@id/changeemail" />
-
     <Button
         android:id="@+id/savechangesbtn"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/yourpass"
+        android:layout_below="@+id/yournumber"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:backgroundTint="@color/blue"
