--- a/app/src/main/res/layout/fragment_emailus.xml
+++ b/app/src/main/res/layout/fragment_emailus.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,7 +8,9 @@
         android:id="@+id/email_doc"
         android:layout_width="wrap_content"
         android:layout_height="262dp"
-        android:src="@drawable/mail" />
+        android:src="@drawable/mail"
+        android:importantForAccessibility="no"
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:id="@+id/emailuson"
@@ -17,7 +20,7 @@
         android:layout_centerHorizontal="true"
         android:text="@string/email_us"
         android:textColor="@color/black"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold" />
     <TextView
         android:layout_width="wrap_content"
@@ -25,8 +28,9 @@
         android:layout_below="@id/emailuson"
         android:text="whiteghost1111@gmail.com"
         android:layout_centerHorizontal="true"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="@color/black"
-        android:id="@+id/myemail"/>
+        android:id="@+id/myemail"
+        tools:ignore="HardcodedText" />
 
 </RelativeLayout>
