--- a/app/src/main/res/layout/activity_forgot_pass_page.xml
+++ b/app/src/main/res/layout/activity_forgot_pass_page.xml
@@ -31,7 +31,7 @@
 
     <EditText
         android:id = "@+id/email"
-        android:layout_width="391dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
@@ -45,7 +45,8 @@
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:autofillHints="emailAddress"/>
+        android:autofillHints="emailAddress"
+        android:minWidth="480dp"/>
 
     <Button
         android:text="@string/send_reset_mail"
