--- a/app/src/main/res/layout/activity_signuppage.xml
+++ b/app/src/main/res/layout/activity_signuppage.xml
@@ -17,7 +17,7 @@
 
     <EditText
         android:id="@+id/username1"
-        android:layout_width="392dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/logphoto"
         android:layout_marginStart="10dp"
@@ -34,11 +34,12 @@
         android:textColorHint="@color/white"
         android:autofillHints="name"
         android:inputType="textPersonName"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:minWidth="480dp"/>
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="392dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/username1"
         android:layout_marginStart="10dp"
@@ -54,11 +55,12 @@
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:autofillHints="emailAddress"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:minWidth="480dp"/>
 
     <EditText
         android:id="@+id/mobileNumber"
-        android:layout_width="392dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/email"
         android:layout_marginStart="10dp"
@@ -74,11 +76,12 @@
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:autofillHints="phone"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:minWidth="480dp"/>
 
     <EditText
         android:id="@+id/signuppass"
-        android:layout_width="392dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/mobileNumber"
         android:layout_marginStart="10dp"
@@ -94,11 +97,12 @@
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:autofillHints="password"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:minWidth="480dp"/>
 
     <EditText
         android:id="@+id/resignuppass"
-        android:layout_width="392dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signuppass"
         android:layout_marginStart="10dp"
@@ -114,7 +118,8 @@
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:autofillHints="password"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:minWidth="480dp"/>
 
     <Button
         android:id="@+id/signup"
