History goes yes! Woaoah wooh!

--- a/app/src/main/res/layout/fragment_meal_history.xml
+++ b/app/src/main/res/layout/fragment_meal_history.xml
@@ -9,7 +9,8 @@
             android:id="@+id/t_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30sp"/>
+            android:textSize="30sp"
+            android:textColor="@color/black"/>
 
         <!-- Spinner (Dropdown) -->
         <Spinner
