--- a/app/src/main/res/layout/fragment_emailus.xml
+++ b/app/src/main/res/layout/fragment_emailus.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -34,3 +37,4 @@
         tools:ignore="HardcodedText" />
 
 </RelativeLayout>
+</ScrollView>
