--- a/app/src/main/res/layout/fragment_abouttheapp.xml
+++ b/app/src/main/res/layout/fragment_abouttheapp.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -33,3 +36,4 @@
         android:text="@string/about_text_2"
         android:layout_centerHorizontal="true"/>
 </RelativeLayout>
+</ScrollView>
